<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/img_cover"
        style="@style/ImageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="Latar belakang" />

    <androidx.core.widget.NestedScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_dummy_cover"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_alignParentTop="true"
                android:src="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="Latar belakang" />

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cv_poster"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="180dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/img_poster"
                    style="@style/ImageView"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:contentDescription="Poster" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:text="The Promised Neverland"
                android:textColor="@color/black"
                android:textSize="@dimen/font_md"
                android:textStyle="bold"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintEnd_toStartOf="@+id/layout_score"
                app:layout_constraintStart_toEndOf="@+id/cv_poster"
                app:layout_constraintTop_toBottomOf="@+id/img_dummy_cover" />

            <LinearLayout
                android:id="@+id/layout_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/layout_score"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title">

                <TextView
                    android:id="@+id/tv_release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_md" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" | 10 Januari"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_nm" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_score"
                    android:contentDescription="Rating" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.65"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/font_nm"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/ib_more_title"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_info"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"
                    android:contentDescription="Lihat judul lengkap" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Serial, 12 episode - Selesai tayang"
                android:textColor="@color/gray_dark"
                app:layout_constraintEnd_toEndOf="@+id/layout_score"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/cv_poster" />

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="22 menit/episode"
                android:textColor="@color/gray_dark"
                app:layout_constraintEnd_toEndOf="@+id/tv_type"
                app:layout_constraintStart_toStartOf="@+id/tv_type"
                app:layout_constraintTop_toBottomOf="@+id/tv_type" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genre"
                style="@style/RecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/layout_score"
                app:layout_constraintStart_toStartOf="@+id/cv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_runtime" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="Sinopsis"
                android:textColor="@color/black"
                android:textSize="@dimen/font_nm"
                app:layout_constraintEnd_toEndOf="@+id/layout_score"
                app:layout_constraintStart_toStartOf="@+id/cv_poster"
                app:layout_constraintTop_toBottomOf="@+id/rv_genre" />

            <TextView
                android:id="@+id/tv_more_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="selengkapnya"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/font_nm"
                app:layout_constraintEnd_toEndOf="@+id/tv_synopsis"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_trailer"
                style="@style/Button.Red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Trailer"
                android:paddingHorizontal="24dp"
                app:icon="@drawable/ic_play"
                app:iconGravity="textStart"
                app:iconPadding="4dp"
                app:layout_constraintStart_toStartOf="@+id/cv_poster"
                app:layout_constraintTop_toBottomOf="@+id/cv_poster" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/btn_trailer"
                app:layout_constraintStart_toEndOf="@+id/btn_trailer"
                app:layout_constraintTop_toTopOf="@+id/btn_trailer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        style="@style/FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        tools:ignore="ContentDescription"
        app:elevation="8dp"/>
</FrameLayout>