...
                    android:padding="16dp">

                    <include layout="@layout/layout_media_vert_placeholder" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    style="@style/RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp" />

                <LinearLayout
...
